[tool.poetry]
name = "fa-ranging"
version = "1.0.0"
description = ""
authors = ["Rohitha Yarlagadda <ryarlagadda@woolworths.com.au>"]
readme = "README.md"
urls = { Source = "https://github.com/Q-Retail/fa_ranging" }

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Data processing & analytics
pandas = "^2.2.3"
pydantic = "2.11.7"
orderly-set = "5.3.0"

# Google Cloud dependencies
google-cloud-aiplatform = "^1.77.0"
google-cloud-bigquery-storage = "^2.30.0"
google-cloud-secret-manager = "^2.23.1"
google-cloud-run = "^0.10.14"
google-api-python-client = "^2.159.0"
oauth2client = "^4.1.3"

# Data transformation
dbt-core = "1.8.8"
dbt-bigquery = "^1.9.1"

# ML Pipeline
kfp = "^2.12.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
# Code quality
pre-commit = "4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

# SQL linting & formatting
sqlfluff = "^3.3.1"
sqlfluff-templater-dbt = "^3.2.2"

# Environment management
nodeenv = "^1.9.1"

# Configuration validation
yamllint = "^1.35.1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.12.0"
coverage = "^7.3.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.9.1"

[tool.poetry.scripts]
ranging = "fa_ranging.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=fa_ranging --cov-report=term-missing"

[tool.coverage.run]
source = ["src/fa_ranging"]
omit = ["tests/*"]
